<resources>
    <string name="app_name">23012011070_MAD_Assignment</string>
    <string name="BloodBank">Blood Bank</string>
    <string name="Register">Register</string>
    <string name="FullName">Full Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="BloodGroup">Blood Group (e.g., A+)</string>
    <string name="Login">Login</string>
    <string name="LoginNow">Already have an account? Login</string>
    <string name="Dashboard">Dashboard</string>
    <string name="DonateBlood">Donate\nBlood</string>
    <string name="BloodRequest">Blood\nRequest</string>
    <string name="BloodStock">Blood\nStock</string>
    <string name="NearestCenter">Nearest\nCenter</string>
    <string name="Profile">Profile</string>
    <string name="LogOut">Log Out</string>
    <string name="Donateblood">Donate Blood</string>
    <string name="Enteryourname">Enter your name</string>
    <string name="Bloodgroup">Blood Group</string>
    <string name="e.g.OA">e.g. O+, A-</string>
    <string name="Location">Location</string>
    <string name="Entercityorcenter">Enter city or center</string>
    <string name="Submit">Submit</string>
    <string name="Bloodrequest">Blood Request</string>
    <string name="UnitsRequired">Units Required</string>
    <string name="Enternumberofunits">Enter number of units</string>
    <string name="HospitalCenter">Hospital / Center</string>
    <string name="Enterhospitalname">Enter hospital name</string>
    <string name="ContactNumber">Contact Number</string>
    <string name="Enterphonenumber">Enter phone number</string>
    <string name="SubmitRequest">Submit Request</string>
    <string name="StorageLocation">Storage Location</string>
    <string name="UnitsAvailable">Units Available</string>
    <string name="Enterbloodgroup">Enter blood group</string>
    <string name="Bloodstock">Blood Stock</string>
    <string name="Search">Search</string>
    <string name="Nearestcenter">Nearest Center</string>
    <string name="Name">Name</string>
    <string name="ParthPatel">Parth Patel</string>
    <string name="abc123gmailcom">abc123@gmail.com</string>
    <string name="Phone">Phone</string>
    <string name="Phoneno">9999999999</string>
    <string name="Address">Address</string>
    <string name="Mehsana">Mehsana</string>
    <string name="Edit">Edit</string>
</resources>